--- a/src/components/variables.css
+++ b/src/components/variables.css
@@ -52,8 +52,8 @@
 
   /* tokens */
   /* colors */
-  --primary: #4a90e2;
-  --background: var(--white);
+  --primary: #1693ac;
+  --background: #dadada;
   --border: var(--black-fade-5);
 
   /* text */
