--- a/src/components/variables.css
+++ b/src/components/variables.css
@@ -53,7 +53,7 @@
   /* tokens */
   /* colors */
   --primary: #1693ac;
-  --background: #dadada;
+  --background: #f2f1f1;
   --border: var(--black-fade-5);
 
   /* text */
