--- a/src/components/hero.module.css
+++ b/src/components/hero.module.css
@@ -41,16 +41,10 @@
   margin: 0;
 }
 
-@media (max-width: 480px) {
+@media (min-width: 480px) {
   .details {
-    display: none;
+    padding-top: var(--space-3xl);
   }
-
-  .image {
-    height: 35vh;
-    max-height: 400px;
-  }
-
 }
 
 @media (min-width: 768px) {
